src/objects/pse__Skill__c.object
<CustomObject>
    <customHelpPage>pse__SkillHelp</customHelpPage>
    <description>Records a certain competency or accreditation. Use skills/certifications to describe staffing requirements for projects and to track individual resource competencies.</description>
    <fields>
        <fullName>pse__Certification_Source__c</fullName>
        <description>Organization or institution that grants this certification.</description>
        <inlineHelpText>Organization or institution that grants this certification.</inlineHelpText>
        <label>Certification Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <description>Text description of this skill or certification.</description>
        <inlineHelpText>Text description of this skill or certification.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__External_Id__c</fullName>
        <description>The ID to identify this skill in an external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID to identify this skill in an external system.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <description>Picklist of certification groups.</description>
        <inlineHelpText>Picklist of certification groups.</inlineHelpText>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI (Visualization) Tools</fullName>
                </value>
                <value>
                    <fullName>Big Data (Hadoop-Eco System)</fullName>
                </value>
                <value>
                    <fullName>CD/CI Applications</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>ETL ( Data Int)</fullName>
                </value>
                <value>
                    <fullName>Languages</fullName>
                </value>
                <value>
                    <fullName>Neo4j Partner-Open Source</fullName>
                </value>
                <value>
                    <fullName>Neo4j Products</fullName>
                </value>
                <value>
                    <fullName>Neo4j Solution Framework</fullName>
                </value>
                <value>
                    <fullName>Operating Systems</fullName>
                </value>
                <value>
                    <fullName>Programming Languages</fullName>
                </value>
                <value>
                    <fullName>Project Management Methodology</fullName>
                </value>
                <value>
                    <fullName>Project Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Key_Path__c</fullName>
        <description>Path field for auto-generated concatenated ancestor IDs of the skill in the hierarchy.</description>
        <formula>IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__c), &quot;&quot;,
        		pse__Parent_Category__r.pse__Parent_Category__c &amp; &quot;,&quot;)
        	&amp;
        	IF(ISBLANK(pse__Parent_Category__c), &quot;&quot;, pse__Parent_Category__c)</formula>
        <label>Hierarchy Key Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Level__c</fullName>
        <description>Indicates the level within the skills hierarchy.</description>
        <formula>IF (
    			ISBLANK ( pse__Parent_Category__c ),
    			0,
    			( LEN ( pse__Hierarchy_Key_Path__c ) + 1 ) / 16
    		) + 1</formula>
        <inlineHelpText>Indicates the level within the skills hierarchy.</inlineHelpText>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Path__c</fullName>
        <description>Path field for auto-generated concatenated ancestor names of the skill in the hierarchy.</description>
        <formula>IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
	        	pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
        		pse__Parent_Category__r.pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(
        		pse__Parent_Category__r.pse__Parent_Category__r.Name), &quot;&quot;,
        		pse__Parent_Category__r.pse__Parent_Category__r.Name &amp; &quot; &gt; &quot;)
        	&amp;
        	IF(ISBLANK(pse__Parent_Category__r.Name), &quot;&quot;, pse__Parent_Category__r.Name)</formula>
        <inlineHelpText>Path field for auto-generated concatenated ancestor names of the skill in the hierarchy.</inlineHelpText>
        <label>Hierarchy Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this skill in the skill hierarchy.</description>
        <inlineHelpText>Lookup to the parent in the skills hierarchy. Parent must have a record type of category.</inlineHelpText>
        <label>Parent Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Skill__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Category</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Category Children</relationshipLabel>
        <relationshipName>Category_Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Hierarchy_Level__c</fullName>
        <description>Indicates at which level in the skills hierarchy the parent of this skill resides.</description>
        <formula>IF ( ISBLANK ( pse__Parent_Category__c ), NULL, pse__Parent_Category__r.pse__Hierarchy_Level__c )</formula>
        <label>Parent Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Record_Type__c</fullName>
        <description>The parent record type for this skill.</description>
        <formula>pse__Parent_Category__r.RecordType.DeveloperName</formula>
        <label>Parent Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Record_Type_Name__c</fullName>
        <description>The record type name for this skill.</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Or_Certification__c</fullName>
        <description>Deprecated. See Record Type instead.</description>
        <inlineHelpText>Deprecated. See Record Type instead.</inlineHelpText>
        <label>Skill Or Certification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skill</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <description>Set of skill types. Used when grouping skills capacity reports.</description>
        <inlineHelpText>Set of skill types. Used when grouping skills capacity reports.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Programming</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Soft Skill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The unique skill name.</description>
        <inlineHelpText>The unique skill name.</inlineHelpText>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Skill / Certification</label>
    <listViews>
        <fullName>PS_Certification_List</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>pse__Skill__c.pse__Certification</value>
        </filters>
        <label>PS Certification List</label>
    </listViews>
    <listViews>
        <fullName>PS_Skills_Certifications</fullName>
        <columns>NAME</columns>
        <columns>pse__Type__c</columns>
        <columns>pse__Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>pse__Skill__c.pse__Skill</value>
        </filters>
        <label>PS Skills List</label>
    </listViews>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill / Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills and Certifications</pluralLabel>
    <recordTypes>
        <fullName>pse__Category</fullName>
        <active>true</active>
        <description>A level in a hierarchy. Skills and certifications can belong to a category.</description>
        <label>Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>pse__Certification</fullName>
        <active>true</active>
        <description>A document relating to a status or a level of achievement.</description>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>pse__Skill</fullName>
        <active>true</active>
        <description>An ability, proficiency, or expertise, in a subject area.</description>
        <label>Skill</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>